--- a/.gitignore
+++ b/.gitignore
@@ -70,7 +70,6 @@ Saved/*
 Intermediate/*
 Plugins/*/Intermediate/*
 
-
 Content/Megascans/*
 Content/BrutalistLevelKit/*
 Content/BigNiagaraBundle/*
@@ -88,4 +87,6 @@ Content/MSPresets/*
 Content/Particles/*
 Content/Skybox/*
 Content/StarterContent/*
+Content/__ExternalActors__/*
+Content/__ExternalObjects__/*
 
