--- a/.gitignore
+++ b/.gitignore
@@ -88,4 +88,6 @@ Content/MSPresets/*
 Content/Particles/*
 Content/Skybox/*
 Content/StarterContent/*
-
+Content/PCGGraph_Grass.uasset
+Content/PCGGraph_Grass.uasset
+Content/PCGGraph_Grass.uasset
