--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,4 @@ Content/StarterContent/*
 Content/PCGGraph_Grass.uasset
 Content/PCGGraph_Grass.uasset
 Content/PCGGraph_Grass.uasset
+Content/RuralAustralia/*
