--- a/.gitignore
+++ b/.gitignore
@@ -92,3 +92,4 @@ Content/PCGGraph_Grass.uasset
 Content/PCGGraph_Grass.uasset
 Content/PCGGraph_Grass.uasset
 Content/RuralAustralia/*
+Content/BlackAlder/*
